<resources>
    <string name="app_name">HaVagas</string>
    <string name="cadastro">HaVagas</string>
    <string name="nome_completo">Nome</string>
    <string name="insira_seu_nome">Insira seu nome</string>
    <string name="email">Email</string>
    <string name="insira_seu_email">Insira seu email</string>
    <string name="ingressar_na_lista_de_emails">Deseja receber oportunidades em seu email?</string>
    <string name="telefone">Telefone</string>
    <string name="insira_seu_telefone">Insira seu telefone</string>
    <string name="genero">Gênero</string>
    <string name="homem">Homem</string>
    <string name="mulher">Mulher</string>
    <string name="nb">Não-binário</string>
    <string name="outro">Outro</string>
    <string name="comercial">Comercial</string>
    <string name="residencial">Residencial</string>
    <string name="adicionar_telefone_celular">Adicionar telefone celular?</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="insira_sua_data_de_nascimento">Insira sua data de nascimento</string>
    <string name="formacao">Formação</string>
    <string name="fundamental">Fundamental</string>
    <string name="medio">Médio</string>
    <string name="superior">Superior</string>
    <string name="mestrado">Mestrado</string>
    <string name="doutorado">Doutorado</string>
    <string name="date">Escolha uma data</string>
    <string name="anoformatura">Ano de formatura</string>
    <string name="insira_seu_ano_de_formatura">Insira seu ano de formatura</string>
    <string name="anoconclusao">Ano de conclusão</string>
    <string name="insira_seu_ano_de_conclusao">Insira seu ano de conclusão</string>
    <string name="instituicao">Instituição</string>
    <string name="insira_sua_instituicao">Insira sua instituição</string>
    <string name="monografia">Título da monografia</string>
    <string name="insira_sua_monografia">Insira o título de sua monografia</string>
    <string name="orientador">Orientador</string>
    <string name="insira_seu_orientador">Insira o nome de seu orientador</string>
    <string name="vagas">Vagas de interesse</string>
    <string name="insira_suas_vagas">Insira suas vagas de interesse</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="celular">Celular</string>
    <string name="insira_seu_celular">Insira seu celular</string>
    <string name="especializacao">Especialização</string>
</resources>