<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/cadastroTv"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:paddingTop="10sp"
                android:text="@string/cadastro"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="#DE2C2C"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:backgroundTint="#F25656" />

        <TextView
                android:id="@+id/nomeTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_completo"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cadastroTv" />

        <EditText
                android:id="@+id/nomeEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insira_seu_nome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nomeTv" />

        <TextView
                android:id="@+id/emailTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nomeEt" />

        <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insira_seu_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailTv" />

        <CheckBox
                android:id="@+id/emailCb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingressar_na_lista_de_emails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailEt"/>

        <TextView
                android:id="@+id/telefoneTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefone"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailCb" />

        <EditText
                android:id="@+id/telefoneEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insira_seu_telefone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/telefoneTv" />

        <RadioGroup
                android:id="@+id/telefoneRg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/telefoneEt">

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comercial" />
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/residencial" />
        </RadioGroup>

        <CheckBox
                android:id="@+id/celularCb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adicionar_telefone_celular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/telefoneRg"/>

        <TextView
                android:id="@+id/celularTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/celular"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/celularCb" />

        <EditText
                android:id="@+id/celularEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="@string/insira_seu_celular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/celularTv" />

        <TextView
                android:id="@+id/generoTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genero"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/celularEt" />

        <RadioGroup
                android:id="@+id/generoRg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/generoTv">

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/homem" />
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mulher" />
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nb" />
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/outro" />

        </RadioGroup>

        <TextView
                android:id="@+id/dataTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_nascimento"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/generoRg" />

        <EditText
                android:id="@+id/dataEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dataTv"/>

        <TextView
                android:id="@+id/formacaoTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formacao"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dataEt" />

        <RadioGroup
                android:id="@+id/formacaoRg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/formacaoTv">

        <RadioButton
                android:id="@+id/fundamentalRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_weight="1"
                android:text="@string/fundamental" />
        <RadioButton
                android:id="@+id/medioRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_weight="1"
                android:text="@string/medio" />
        <RadioButton
                android:id="@+id/superiorRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_weight="1"
                android:text="@string/superior" />
        <RadioButton
                android:id="@+id/especializacaoRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_weight="1"
                android:text="@string/especializacao" />
        <RadioButton
                android:id="@+id/mestradoRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_weight="1"
                android:text="@string/mestrado" />
        <RadioButton
                android:id="@+id/doutoradoRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_weight="1"
                android:text="@string/doutorado" />

        </RadioGroup>

        <LinearLayout
                android:id="@+id/formacaoLl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/formacaoRg"
                >

            <TextView
                    android:id="@+id/anoFormaturaTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/anoformatura"
                    android:textSize="18sp"
                    />

            <EditText
                    android:id="@+id/anoFormaturaEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:hint="@string/insira_seu_ano_de_formatura"/>

            <TextView
                    android:id="@+id/anoConclusaoTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/anoconclusao"
                    android:textSize="18sp"
                    />

            <EditText
                    android:id="@+id/anoConclusaoEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:hint="@string/insira_seu_ano_de_conclusao"
                    />

            <TextView
                    android:id="@+id/instituicaoTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/instituicao"
                    android:textSize="18sp"
                    />

            <EditText
                    android:id="@+id/instituicaoEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:hint="@string/insira_sua_instituicao"
                    />

            <TextView
                    android:id="@+id/monografiaTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/monografia"
                    android:textSize="18sp"
                    />

            <EditText
                    android:id="@+id/monografiaEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:hint="@string/insira_sua_monografia"
                    />

            <TextView
                    android:id="@+id/orientadorTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/orientador"
                    android:textSize="18sp"
                    />

            <EditText
                    android:id="@+id/orientadorEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:hint="@string/insira_seu_orientador"
                    />

        </LinearLayout>

        <TextView
                android:id="@+id/vagasTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vagas"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/formacaoLl" />

        <EditText
                android:id="@+id/vagasEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insira_suas_vagas"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vagasTv" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vagasEt">
            <Button
                    android:id="@+id/limparBt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/limpar" />
            <Button
                    android:id="@+id/salvarBt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/salvar" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>